# apps/api/src/controllers/team.controller.ts
@@ -11,6 +11,55 @@ import { handler } from './handler';
 export function TeamController(teamService: TeamService): Router {
   const router = Router();
 
+  /**
+   * @openapi
+   *
+   * /teams:
+   *   post:
+   *     description: Create a new team
+   *     tags:
+   *       - Team
+   *     security:
+   *       - bearerAuth: []
+   *     requestBody:
+   *       description: The team to create
+   *       required: true
+   *       content:
+   *         application/json:
+   *           schema:
+   *             $ref: '#/components/schemas/CreateTeamSchema'
+   *     responses:
+   *       201:
+   *         description: The created team
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Team'
+   *       400:
+   *         description: Invalid request body
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/BadRequest'
+   *       401:
+   *         description: You are not authenticated
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Unauthorized'
+   *       403:
+   *         description: You are not authorized to access this resource
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Forbidden'
+   *       500:
+   *         description: An unexpected error occurred
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/InternalServerError'
+   */
   router.post(
     '/teams',
     hasRole(Role.ADMIN),
@@ -70,6 +119,63 @@ export function TeamController(teamService: TeamService): Router {
     })
   );
 
+  /**
+   * @openapi
+   *
+   * /teams/{teamId}:
+   *   put:
+   *     description: Update a team
+   *     tags:
+   *       - Team
+   *     security:
+   *       - bearerAuth: []
+   *     parameters:
+   *       - $ref: '#/components/parameters/teamId'
+   *     requestBody:
+   *       description: Team updates
+   *       required: true
+   *       content:
+   *         application/json:
+   *           schema:
+   *             $ref: '#/components/schemas/UpdateTeamSchema'
+   *     responses:
+   *       200:
+   *         description: The updated team
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Team'
+   *       400:
+   *         description: Invalid request body
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/BadRequest'
+   *       401:
+   *         description: You are not authenticated
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Unauthorized'
+   *       403:
+   *         description: You are not authorized to access this resource
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Forbidden'
+   *       404:
+   *         description: The team does not exist
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/NotFound'
+   *       500:
+   *         description: An unexpected error occurred
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/InternalServerError'
+   */
   router.put(
     '/teams/:teamId',
     hasRole(Role.ADMIN),
@@ -102,6 +208,46 @@ export function TeamController(teamService: TeamService): Router {
     })
   );
 
+  /**
+   * @openapi
+   *
+   * /teams/{teamId}:
+   *   delete:
+   *     description: Delete a team
+   *     tags:
+   *       - Team
+   *     security:
+   *       - bearerAuth: []
+   *     parameters:
+   *       - $ref: '#/components/parameters/teamId'
+   *     responses:
+   *       200:
+   *         description: Successfully deleted the team
+   *       401:
+   *         description: You are not authenticated
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Unauthorized'
+   *       403:
+   *         description: You are not authorized to access this resource
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/Forbidden'
+   *       404:
+   *         description: The team does not exist
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/NotFound'
+   *       500:
+   *         description: An unexpected error occurred
+   *         content:
+   *           application/json:
+   *             schema:
+   *               $ref: '#/components/schemas/InternalServerError'
+   */
   router.delete(
     '/teams/:teamId',
     hasRole(Role.ADMIN),
